--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
 app.jwt.secret= ${JWT_SECRET}
-app.jwt.expiration=900000
+app.jwt.expiration=86400000
